<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="connection_error">Check your connection please</string>
    <!--    Launch Screen-->
    <string name="launch_screen_logo">Launch screen logo</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <!--    Representative Screen-->
    <string name="representative_avatar">Representative Avatar</string>
    <string name="representative_fb">%s facebook page</string>
    <string name="representative_twitter">%s twitted</string>
    <string name="representative_www">%s www page</string>
    <!--    Elections Screen-->
    <string name="saved_elections">Saved Elections</string>
    <!--    Voter Info Screen-->
    <string name="save_action">Save</string>
    <string name="remove_action">Remove</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to detect nearest address</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="voting_location">&lt;a href="%s">All voting locations&lt;/a></string>
    <string name="ballot_info">&lt;a href="%s">Ballot info&lt;/a></string>
    <string name="voting_location_info">&lt;a href="%s">Voting location finder&lt;/a></string>
    <string name="check_info_on_web">Check info on WEB:</string>
    <string name="address_label">Address:</string>
    <!--    Representative Screen-->
    <string name="err_line1">Please enter address</string>
    <string name="err_city">Please enter city</string>
    <string name="err_state">Please enter state</string>
    <string name="err_zip">Please enter zip code</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1_label">Address Line 1</string>
    <string name="address_line_2_label">Address Line 2</string>
    <string name="city_label">City</string>
    <string name="zip_code_label">Zip code</string>
    <string name="my_representatives_label">My representatives</string>
    <string name="use_loc">Use My Location</string>
</resources>
