<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>


    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/search_title"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/representative_search"
            android:gravity="center"
            android:padding="@dimen/padding_default"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />


        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            android:autofillHints=""
            android:hint="@string/address_line_1_label"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.addressLine1}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            android:autofillHints=""
            android:hint="@string/address_line_2_label"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.addressLine2}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            android:autofillHints=""
            android:hint="@string/city_label"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            stateValue="@{viewModel.state}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            android:autofillHints=""
            android:hint="@string/zip_code_label"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.zipCode}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/button_search"
            style="@style/LaunchScreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.validateAndSearchRepresentatives()}"
            android:text="@string/find_my_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            style="@style/LaunchScreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_loc"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <TextView
            android:id="@+id/tvRepresentativeTitle"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_default"
            android:text="@string/my_representatives_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <View
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRepresentativeTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRepresentative"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:representativeData="@{viewModel.representative}"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRepresentativeTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
