<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/padding_xxlarge"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="64dp"
            android:contentDescription="@string/launch_screen_logo"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@+id/btnUpcoming"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUpcoming"
            style="@style/LaunchScreenButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_default"
            android:contentDescription="@string/upcoming_elections"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/btnRepresentative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnRepresentative"
            style="@style/LaunchScreenButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_large"
            android:contentDescription="@string/find_my_representatives"
            android:text="@string/find_my_representatives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
